@@ -292,7 +292,7 @@ class SvgPage(object):
 
 
 class SvgRenderer(object):
-    def __init__(self, can_draw_sharps_and_flats, highlight_color):
+    def __init__(self, can_draw_sharps_and_flats, highlight_color, highlight_follow_color = None):
         self.can_draw_sharps_and_flats = can_draw_sharps_and_flats
         self.path_cache = {}
         self.fill_cache = {}
@@ -315,6 +315,11 @@ class SvgRenderer(object):
         self.buffer = None
         # 1.3.6.2 [JWdJ] 2015-02-12 Added voicecolor
         self.highlight_color = highlight_color
+        if highlight_follow_color:
+            self.highlight_follow_color = highlight_follow_color
+        else:
+            self.highlight_follow_color = highlight_color
+        self.highlight_follow = False
         self.default_transform = None
         #self.update_buffer(self.empty_page)
         if wx.Platform == "__WXMAC__":
@@ -389,7 +394,7 @@ class SvgRenderer(object):
             dc.SetBackground(wx.WHITE_BRUSH)
             dc.Clear()
 
-    def draw_notes(self, page, note_indices, highlight, dc=None):
+    def draw_notes(self, page, note_indices, highlight, dc=None, highlight_follow=False ):
         if not page.note_draw_info or not note_indices:
             return
         dc = dc or wx.MemoryDC(self.buffer)
@@ -401,7 +406,7 @@ class SvgRenderer(object):
         for element_id, current_color, matrix in [page.note_draw_info[i] for i in note_indices]:
             gc.PushState()
             transform(gc.CreateMatrix(*matrix))
-            self.draw_svg_element(page, gc, page.id_to_element[element_id], highlight, current_color, {})
+            self.draw_svg_element(page, gc, page.id_to_element[element_id], highlight, current_color, {}, highlight_follow)
             gc.PopState()
         gc.PopState()
 
@@ -651,7 +656,7 @@ class SvgRenderer(object):
     #     om.Concat(sm)
     #     return om
 
-    def draw_svg_element(self, page, dc, svg_element, highlight, current_color, current_style):
+    def draw_svg_element(self, page, dc, svg_element, highlight, current_color, current_style, highlight_follow=False):
         ''' This is the main engine for converting the svg items in the svg file into graphics
         displayed in the music pane. The book SVG Essentials by J. David
         Eisenberg describes all the elements used (eg. g, use, ellipse, ...)
@@ -703,7 +708,7 @@ class SvgRenderer(object):
 
             # 1.3.6.2 [JWdJ] 2015-02-14 Only 'g' and 'defs' have children
             for child in svg_element.children:
-                self.draw_svg_element(page, dc, child, highlight, current_color, current_style.copy())
+                self.draw_svg_element(page, dc, child, highlight, current_color, current_style.copy(), highlight_follow)
 
         # if something is going to be drawn, prepare
         else:
@@ -716,7 +721,10 @@ class SvgRenderer(object):
                     fill = current_color
 
                 if highlight and fill != 'none':
-                    fill = self.highlight_color
+                    if highlight_follow:
+                        fill = self.highlight_follow_color
+                    else:
+                        fill = self.highlight_color    
 
                 self.set_fill(dc, fill)
 
@@ -725,7 +733,10 @@ class SvgRenderer(object):
                 stroke = current_color
 
             if highlight and stroke != 'none':
-                stroke = self.highlight_color
+                if highlight_follow:
+                    stroke = self.highlight_follow_color
+                else:
+                    stroke = self.highlight_color
 
             self.set_stroke(dc, stroke, float(attr.get('stroke-width', 1.0)), attr.get('stroke-linecap', 'butt'), attr.get('stroke-dasharray', None))
 
@@ -755,16 +766,18 @@ class SvgRenderer(object):
 
             dc.PushState()
             dc.Translate(x, y)
-            self.draw_svg_element(page, dc, page.id_to_element[element_id], highlight, current_color, current_style.copy())
+            self.draw_svg_element(page, dc, page.id_to_element[element_id], highlight, current_color, current_style.copy(), highlight_follow)
             if desc:
                 page.note_draw_info.append((element_id, current_color, dc.GetTransform().Get()))
             dc.PopState()
 
+        #FAU: Attribut ellipse is used for note heads
         elif name == 'ellipse':
             cx, cy, rx, ry = attr.get('cx', 0), attr.get('cy', 0), attr['rx'], attr['ry']
             cx, cy, rx, ry = map(float, (cx, cy, rx, ry))
             path = dc.CreatePath()
-            path.AddEllipse(cx-rx, cy-ry, rx+rx, ry+ry)
+            #FAU: Add +0.5 to better align note heads. %%TODO%% verify how to link it to score position
+            path.AddEllipse(cx-rx, cy-ry+0.5, rx+rx, ry+ry)
             dc.DrawPath(path)
 
         elif name == 'circle':
@@ -773,6 +786,7 @@ class SvgRenderer(object):
             path.AddCircle(cx, cy, r)
             dc.DrawPath(path)
 
+        #FAU: Attribut text in the svg is used for title, lyrics and also meter
         elif name == 'text':
             text = attr['text']
             if not self.can_draw_sharps_and_flats:
@@ -812,7 +826,8 @@ class SvgRenderer(object):
                     elif fi == 'italic':
                         font_style = wx.FONTSTYLE_ITALIC
                     elif fi.endswith('px'):
-                        font_size = int(float(fi[0:-2]))
+                        #FAU: font_size at least for the meter is drawn a bit too small. Add a +2
+                        font_size = int(float(fi[0:-2])+2)
                     elif fi in ['serif','sans-serif','monospace','bookman']:
                         svg_font_family = fi
 
@@ -825,7 +840,7 @@ class SvgRenderer(object):
             wxfont = wx.Font(font_size, font_family, font_style, weight, False, font_face, wx.FONTENCODING_DEFAULT)
             if wx.VERSION >= (3, 0) or '__WXMSW__' in wx.PlatformInfo:
                 wxfont.SetPixelSize(wx.Size(0, font_size))
-                y += 1
+                y += 0.5
             else:
                 wxfont.SetPointSize(font_size)
 
